# HoverRobotNavigation

./: .gitignore  .gitmodules  README.md  comandos utiles.txt  controlCamera.py  frames_2025-09-15_23.44.44.gv  frames_2025-09-21_23.01.39.gv  frames_2025-11-19_20.13.08.gv  getFrame.py  requirements.txt  runControlCamera.py  rvizConfig.rviz
install/: local_setup.sh  setup.sh
install/ros2_ps5_stereo/lib/ros2_ps5_stereo/: camera_node
install/ros2_ps5_stereo/share/ros2_ps5_stereo/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/disparity_to_laserscan_cpp/: CMakeLists.txt  package.xml
src/disparity_to_laserscan_cpp/src/: disparity_to_laserscan.cpp
src/hoverrobot_navigation/: package.xml  setup.cfg  setup.py
src/hoverrobot_navigation/config/: cartographer_config.lua  mapper_params_online_async.yaml  params.yaml  slam_toolbox.yaml
src/hoverrobot_navigation/hoverrobot_navigation/: scan_relay.py
src/hoverrobot_navigation/launch/: bringup.launch.py  cartographer.launch.py  nav2_local.launch.py  slam.launch.py
